--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
   },
   "dependencies": {
     "commander": "^2.9.0",
-    "lodash": "^4.17.4"
+    "jpeg-js": "^0.2.0",
+    "lodash": "^4.17.4",
+    "mz": "^2.6.0"
   },
   "main": "index.js"
 }
